WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
197532
REGRESSION: Layout test editing/selection/ios/selection-after-changing-text-with-callout-menu.html is failing
https://bugs.webkit.org/show_bug.cgi?id=197532
Summary
REGRESSION: Layout test editing/selection/ios/selection-after-changing-text-w...
Wenson Hsieh
Reported
2019-05-02 15:03:26 PDT
<
rdar://problem/50177144
>
Attachments
Patch
(13.35 KB, patch)
2019-05-02 16:30 PDT
,
Wenson Hsieh
rniwa
: review+
Details
Formatted Diff
Diff
Fix GTK/WPE/Win
(15.64 KB, patch)
2019-05-02 17:24 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2019-05-02 16:30:53 PDT
Created
attachment 368841
[details]
Patch
Ryosuke Niwa
Comment 2
2019-05-02 16:38:49 PDT
Comment on
attachment 368841
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=368841&action=review
> Source/WebKit/UIProcess/ios/WebPageProxyIOS.mm:1110 > -void WebPageProxy::editorStateChanged(const EditorState& editorState) > +void WebPageProxy::setEditorState(const EditorState& editorState)
Maybe updateEditorState? It's not like we're setting a new editor state object. EditorState is always there but we're updating its content.
Wenson Hsieh
Comment 3
2019-05-02 17:24:50 PDT
Created
attachment 368850
[details]
Fix GTK/WPE/Win
WebKit Commit Bot
Comment 4
2019-05-02 18:05:37 PDT
Comment on
attachment 368850
[details]
Fix GTK/WPE/Win Clearing flags on attachment: 368850 Committed
r244897
: <
https://trac.webkit.org/changeset/244897
>
Shawn Roberts
Comment 5
2019-05-03 09:17:48 PDT
It appears appears after the changes in
https://trac.webkit.org/changeset/244897
We have 4 API time outs on iOS Simulator and iOS Simulator Debug testers. It appears that these same failures were observed by the new API-iOS EWS They are flaky Timeouts, but I've been able to verify them all locally with
r244897
, and they all pass with
r244895
TestWebKitAPI.KeyboardInputTests.OverrideInputAssistantItemBarButtonGroups TestWebKitAPI.KeyboardInputTests.CaretSelectionRectAfterRestoringFirstResponderWithRetainActiveFocusedState TestWebKitAPI.KeyboardInputTests.ModifyInputAssistantItemBarButtonGroups TestWebKitAPI.KeyboardInputTests.CaretSelectionRectAfterRestoringFirstResponder Verified with : run-api-tests TestWebKitAPI.KeyboardInputTests.OverrideInputAssistantItemBarButtonGroups TestWebKitAPI.KeyboardInputTests.CaretSelectionRectAfterRestoringFirstResponderWithRetainActiveFocusedState TestWebKitAPI.KeyboardInputTests.ModifyInputAssistantItemBarButtonGroups TestWebKitAPI.KeyboardInputTests.CaretSelectionRectAfterRestoringFirstResponder --debug --ios-simulator 2 of the tests timeout with the following error: TestWebKitAPI.KeyboardInputTests.CaretSelectionRectAfterRestoringFirstResponderWithRetainActiveFocusedState 2019-05-03 09:15:48.831 TestWebKitAPI[6692:429492] Expected a caret rect of {{16, 13}, {2, 15}}, but still observed {{16, 13}, {3, 15}} TestWebKitAPI.KeyboardInputTests.CaretSelectionRectAfterRestoringFirstResponder 2019-05-03 09:15:19.193 TestWebKitAPI[6650:425896] Expected a caret rect of {{16, 13}, {2, 15}}, but still observed {{16, 13}, {3, 15}}
Wenson Hsieh
Comment 6
2019-05-03 09:18:36 PDT
(In reply to Shawn Roberts from
comment #5
)
> It appears appears after the changes in >
https://trac.webkit.org/changeset/244897
> > We have 4 API time outs on iOS Simulator and iOS Simulator Debug testers. It > appears that these same failures were observed by the new API-iOS EWS > > They are flaky Timeouts, but I've been able to verify them all locally with >
r244897
, and they all pass with
r244895
> > TestWebKitAPI.KeyboardInputTests.OverrideInputAssistantItemBarButtonGroups > TestWebKitAPI.KeyboardInputTests. > CaretSelectionRectAfterRestoringFirstResponderWithRetainActiveFocusedState > TestWebKitAPI.KeyboardInputTests.ModifyInputAssistantItemBarButtonGroups > TestWebKitAPI.KeyboardInputTests. > CaretSelectionRectAfterRestoringFirstResponder > > Verified with : > > run-api-tests > TestWebKitAPI.KeyboardInputTests.OverrideInputAssistantItemBarButtonGroups > TestWebKitAPI.KeyboardInputTests. > CaretSelectionRectAfterRestoringFirstResponderWithRetainActiveFocusedState > TestWebKitAPI.KeyboardInputTests.ModifyInputAssistantItemBarButtonGroups > TestWebKitAPI.KeyboardInputTests. > CaretSelectionRectAfterRestoringFirstResponder --debug --ios-simulator > > 2 of the tests timeout with the following error: > > TestWebKitAPI.KeyboardInputTests. > CaretSelectionRectAfterRestoringFirstResponderWithRetainActiveFocusedState > 2019-05-03 09:15:48.831 TestWebKitAPI[6692:429492] Expected a caret > rect of {{16, 13}, {2, 15}}, but still observed {{16, 13}, {3, 15}} > > > TestWebKitAPI.KeyboardInputTests. > CaretSelectionRectAfterRestoringFirstResponder > 2019-05-03 09:15:19.193 TestWebKitAPI[6650:425896] Expected a caret > rect of {{16, 13}, {2, 15}}, but still observed {{16, 13}, {3, 15}}
I'm looking into this now.
Wenson Hsieh
Comment 7
2019-05-03 10:17:17 PDT
> 2 of the tests timeout with the following error: > > TestWebKitAPI.KeyboardInputTests. > CaretSelectionRectAfterRestoringFirstResponderWithRetainActiveFocusedState > 2019-05-03 09:15:48.831 TestWebKitAPI[6692:429492] Expected a caret > rect of {{16, 13}, {2, 15}}, but still observed {{16, 13}, {3, 15}} > > > TestWebKitAPI.KeyboardInputTests. > CaretSelectionRectAfterRestoringFirstResponder > 2019-05-03 09:15:19.193 TestWebKitAPI[6650:425896] Expected a caret > rect of {{16, 13}, {2, 15}}, but still observed {{16, 13}, {3, 15}}
So for these two tests, I think it's actually a progression? Bizarrely, I changed the expectation from {{ 16, 13 }, { 3, 15 }} to {{ 16, 13 }, { 2, 15 }} in
r234614
because I thought the width of 3 was before transforming to content view coordinates. However, logging shows that the EditorState's caret rect is indeed {{ 16, 13 }, { 3, 15 }} in content coordinates, so {{ 16, 13 }, { 3, 15 }} actually seems right. Need to understand why this changed...
Wenson Hsieh
Comment 8
2019-05-03 14:31:40 PDT
(In reply to Wenson Hsieh from
comment #7
)
> > 2 of the tests timeout with the following error: > > > > TestWebKitAPI.KeyboardInputTests. > > CaretSelectionRectAfterRestoringFirstResponderWithRetainActiveFocusedState > > 2019-05-03 09:15:48.831 TestWebKitAPI[6692:429492] Expected a caret > > rect of {{16, 13}, {2, 15}}, but still observed {{16, 13}, {3, 15}} > > > > > > TestWebKitAPI.KeyboardInputTests. > > CaretSelectionRectAfterRestoringFirstResponder > > 2019-05-03 09:15:19.193 TestWebKitAPI[6650:425896] Expected a caret > > rect of {{16, 13}, {2, 15}}, but still observed {{16, 13}, {3, 15}} > > So for these two tests, I think it's actually a progression? > > Bizarrely, I changed the expectation from {{ 16, 13 }, { 3, 15 }} to {{ 16, > 13 }, { 2, 15 }} in
r234614
because I thought the width of 3 was before > transforming to content view coordinates. However, logging shows that the > EditorState's caret rect is indeed {{ 16, 13 }, { 3, 15 }} in content > coordinates, so {{ 16, 13 }, { 3, 15 }} actually seems right. > > Need to understand why this changed...
I think these two tests caught a legitimate regression; going to track this in
https://bugs.webkit.org/show_bug.cgi?id=197579
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug